bdr.BDR2.scala.error
Compilation error:
BDR2:3: error: illegal start of simple pattern
    case if readMessage()=="R" => right();forward();
         ^BDR2:3: error: '=>' expected but ';' found.
    case if readMessage()=="R" => right();forward();
                                         ^BDR2:4: error: illegal start of simple pattern
    case if readMessage()=="E" => forward();
         ^BDR2:4: error: '=>' expected but ';' found.
    case if readMessage()=="E" => forward();
                                           ^