bdr.BDR2.scala.code
while (isOverMessage()==true){
  name match {
    case if readMessage()=="R" => right();forward();
    case if readMessage()=="E" => forward();
  }
}